# Zoomcamp

./: README.md  homework5.py  hw1.ipynb  hw3.ipynb  hw4.ipynb  hw5.ipynb  hw6.ipynb  hw8.ipynb
hw10/k8s/: deployment.yaml  service.yaml
hw5/: .python-version  Dockerfile  model.py  model_deploy.py  pyproject.toml  test.py
hw9/: Dockerfile  hw9.ipynb  lambda_function.py
midproject/: Dockerfile  README.md  app.py  app_v2.py  app_v3.py  census_data_2024_final.pkl  fly.toml  laucntycur14.xlsx  main.py  model.pkl  predict.py  predict_v2.py  pyproject.toml  requirements.txt  run_app.py  test_predict.py  train_model.ipynb  train_model.py  train_model_v2.ipynb  train_model_v2.py
midproject/backup/: app_v3.py  model_deploy.py  predict_v2.py  test.py
