[project]
name = "midproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "fastapi>=0.121.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
